<resources>
    <string name="app_name">ChillChat</string>
    <string name="sign_in_text">Login</string>
    <string name="pass_text">Password</string>
    <string name="sign_in_button_text">C H I L L A X</string>
    <string name="enter_text">Enter text…</string>
    <string name="send">Send</string>
    <string name="title_text">C h i l l C h a t</string>
    <string name="login_hint">L O G I N</string>
    <string name="pass_hint">P A S S W O R D</string>

    <string name="nav_button_main">Chat</string>
    <string name="nav_button_settings">Settings</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="nav_button_room">Room</string>
    <string name="nav_button_wall">Wall</string>
    <string name="nav_button_search_room">Search room</string>
</resources>
