<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.gamedev.chillchat.GUI.MainActivity" android:weightSum="1">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:weightSum="1"
            android:background="#ffebee" tools:ignore="UselessParent">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/sign_in_text"
                android:ems="10"
                android:id="@+id/login_edit"
                android:layout_weight="0.1"
                android:textSize="30sp"
                android:textColor="#ef5350"
                android:textColorHint="#ef5350"
                android:layout_marginBottom="5dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/pass_text"
                android:textSize="20sp"
                android:textColorHint="#ef5350"
                android:textColor="#ef5350"
                android:id="@+id/pass_edit" android:layout_weight="0.1"/>
        <Button
                android:text="@string/sign_in_button_text"
                android:layout_width="157dp"
                android:layout_height="156dp" android:id="@+id/sign_in_button"
                android:layout_marginTop="80dp"
                android:layout_gravity="center_horizontal"
                android:textSize="50sp"
                android:textColor="#ffebee"
                android:textColorHighlight="#263238"
                android:background="@drawable/myrect"
                android:elevation="50dp"
                android:drawableBottom="@color/colorPrimary"
                android:drawableTop="@color/colorPrimary"
                tools:ignore="UnusedAttribute"/>
    </LinearLayout>

</LinearLayout>
