<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.gamedev.chillchat.GUI.ActivityLogin"
        android:weightSum="1">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:weightSum="1"
            android:background="@color/dark_background"
            tools:ignore="UselessParent">

        <TextView android:id="@+id/textView"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingBottom="40sp"
                  android:paddingTop="60sp"
                  android:text="@string/title_text"
                  android:textAlignment="center"
                  android:textAllCaps="false"
                  android:textAppearance="@style/TextAppearance.AppCompat.Tooltip"
                  android:textColor="@android:color/white"
                  android:textIsSelectable="true"
                  android:textSize="50sp"
                  android:typeface="sans"
                  android:textStyle="bold"
                  tools:layout_editor_absoluteX="94dp"
                  tools:layout_editor_absoluteY="128dp"/>

        <EditText
                android:id="@+id/login_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:layout_marginRight="40sp"
                android:ems="10"
                android:hint="@string/login_hint"
                android:inputType="textPersonName"
                android:padding="8sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/light_grey"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="59dp"
                tools:layout_editor_absoluteY="241dp"/>

        <EditText
                android:id="@+id/pass_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:layout_marginRight="40sp"
                android:ems="10"
                android:hint="@string/pass_hint"
                android:inputType="textPassword"
                android:padding="8sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/light_grey"
                tools:layout_editor_absoluteX="59dp"
                tools:layout_editor_absoluteY="298dp"
                android:layout_weight="0.1"/>
        <Button
                android:id="@+id/sign_in_button"
                android:text="@string/sign_in_button_text"
                android:layout_width="157dp"
                android:layout_height="156dp"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textColor="#ffebee"
                android:textColorHighlight="#263238"
                android:background="@drawable/myrect"
                android:elevation="50dp"
                android:drawableBottom="@color/colorPrimary"
                android:drawableTop="@color/colorPrimary"
                tools:ignore="UnusedAttribute"/>
    </LinearLayout>

</LinearLayout>